feat(webview): 添加使用原生窗口编辑器打开思源块的功能 | Add the function of opening SiYuan block with native window editor.

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -93,7 +93,8 @@
         "description": "The type of SiYuan editor that opens in a new window by default",
         "options": {
           "desktop": "Desktop Editor",
-          "mobile": "Mobile Editor"
+          "mobile": "Mobile Editor",
+          "window": "Native Multi-Window Editor"
         },
         "title": "Editor Type"
       },
