feat(webview): 添加打开新标签页功能 | Add the function of opening a new tab.

--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -16,6 +16,10 @@
     "openMobildWindow": {
       "label": "打開思源移動端窗口"
     },
+    "openNewTab": {
+      "label": "打開新頁簽",
+      "title": "新頁簽"
+    },
     "openTab": {
       "label": "在新頁簽中打開"
     },
