--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -16,6 +16,10 @@
     "openMobildWindow": {
       "label": "Open SiYuan Mobile Window"
     },
+    "openNewTab": {
+      "label": "Open New Tab",
+      "title": "New Tab"
+    },
     "openTab": {
       "label": "Open in new tab"
     },
