feat(custom-block): 添加 `悬浮显示` 功能 | Add `Floating Display` function.
REF: https://github.com/Zuoqiu-Yingyi/siyuan-plugin-custom-block/issues/12

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -22,6 +22,9 @@
         "custom-block-list-view-table": {
             "label": "List - Table View"
         },
+        "custom-block-position-sticky": {
+            "label": "Floating Display"
+        },
         "custom-block-render-content": {
             "label": "Display Block Content"
         },
