--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -22,6 +22,9 @@
         "custom-block-list-view-table": {
             "label": "列表-表格視圖"
         },
+        "custom-block-position-sticky": {
+            "label": "懸浮顯示"
+        },
         "custom-block-render-content": {
             "label": "顯示塊內容"
         },
