--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -22,6 +22,9 @@
         "custom-block-list-view-table": {
             "label": "列表-表格视图"
         },
+        "custom-block-position-sticky": {
+            "label": "悬浮显示"
+        },
         "custom-block-render-content": {
             "label": "显示块内容"
         },
