feat(jupyter-client): 添加上下文帮助面板 | Add context help panel.

--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -44,6 +44,9 @@
         },
         "title": "Jupyter"
     },
+    "inspectDock": {
+        "title": "Jupyter 上下文帮助"
+    },
     "menu": {
         "import": {
             "accelerator": "*.ipynb",
