--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -44,6 +44,9 @@
         },
         "title": "Jupyter"
     },
+    "inspectDock": {
+        "title": "Jupyter Contextual Help"
+    },
     "menu": {
         "import": {
             "accelerator": "*.ipynb",
