--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -44,6 +44,9 @@
         },
         "title": "Jupyter"
     },
+    "inspectDock": {
+        "title": "Jupyter 上下文幫助"
+    },
     "menu": {
         "import": {
             "accelerator": "*.ipynb",
