feat(jupyter-client): 完善设置面板 | Improve settings panel.

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -201,6 +201,10 @@
                     "description": "Enable to attempt to establish connection with Jupyter service",
                     "title": "Enable Jupyter client"
                 },
+                "delay": {
+                    "description": "The delay time when calling the Jupyter kernel language service to get context help and code suggestions.<br/>Unit: milliseconds",
+                    "title": "Language service call delay"
+                },
                 "title": "Global"
             },
             "importTab": {
