--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -201,6 +201,10 @@
                     "description": "开启后将尝试与 Jupyter 服务建立连接",
                     "title": "启用 Jupyter 客户端"
                 },
+                "delay": {
+                    "description": "调用 Jupyter 内核语言服务获取上下文帮助与代码建议时的延时时间<br/>单位：毫秒",
+                    "title": "语言服务调用延时"
+                },
                 "title": "全局"
             },
             "importTab": {
