feat(webview): 添加块资源打开菜单项 | Add block resource open menu items.

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -71,6 +71,9 @@
       "label": "Open New Tab",
       "title": "New Tab"
     },
+    "openResource": {
+      "label": "Open Resource"
+    },
     "openTab": {
       "label": "Open in new tab"
     },
