feat(custom-block): 添加一个用于在导出时启用/禁用样式的菜单项 | Add a menu item for enabling/disabling styles when exporting.

--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -7,6 +7,12 @@
     },
     "displayName": "自定义块样式",
     "menu": {
+        "custom-block-export-disable": {
+            "label": "导出-禁用样式"
+        },
+        "custom-block-export-enable": {
+            "label": "导出-启用样式"
+        },
         "custom-block-fullscreen": {
             "label": "全屏显示"
         },
