--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -7,6 +7,12 @@
     },
     "displayName": "自定義塊樣式",
     "menu": {
+        "custom-block-export-disable": {
+            "label": "導出-禁用樣式"
+        },
+        "custom-block-export-enable": {
+            "label": "導出-啟用樣式"
+        },
         "custom-block-fullscreen": {
             "label": "全屏顯示"
         },
